fix: table overflow made scrollable

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -39,6 +39,11 @@ th {
     padding-bottom: 0.4rem;
 }
 
+td {
+    padding-top: 0.1rem;
+    padding-bottom: 0.1rem;
+}
+
 th {
     border-bottom: #70707080 1px solid;
     padding-top: 0;
